# learning-platform-analytics

./: .gitignore  README.md  config.py  data.dvc  learning-platform-analytics.ipynb  learning_platform_analytics.ipynb  notebook.ipynb  pyproject.toml  run_tests.sh  schema.sql  setup.sh
.dvc/: .gitignore
src/: __init__.py  analysis.py  database.py  queries.py  utils.py
