[project]
name = "learning-platform-analytics"
version = "0.1.0"
description = "SQLite + DVC analytics project to identify growth opportunities on a learning platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    # Core data analysis & visualization
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",

    # Jupyter ecosystem
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",

    # Data Version Control
    "dvc[all]>=3.50.0",           # [all] includes support for S3, Google Drive, SSH, etc.

    # Code quality & formatting
    "black>=24.8.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",

    # Optional utilities
    "pip-tools>=7.4.0",
]

[tool.uv]
managed = true

# ====================== Tool Configurations ======================

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".dvc"
]

# DVC-specific configuration
[tool.dvc]
# Optional: you can add custom DVC settings here if needed

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
